# idris2-rcpr

./: CMakeLists.txt  README.md  config.h.cmake
include/rcprhelper/: psock.h
scripts/: idris2_compile.sh  idris2_docs.sh  idris2_install.sh
src/helper/psock/: psock_br_handle_create.c  psock_br_handle_get.c  psock_br_handle_get_status.c  psock_br_handle_is_valid.c  psock_br_handle_read_line.c  psock_br_handle_release.c  psock_br_handle_resource_release.c  psock_br_handle_write_string_line.c  psock_br_status_is_partial_line_read.c  psock_get_string.c  psock_handle_accept.c  psock_handle_create_from_listen_address.c  psock_handle_get.c  psock_handle_get_status.c  psock_handle_is_valid.c  psock_handle_release.c  psock_handle_resource_release.c  psock_internal.h  stub.c  with_accepted_psock_handle.c  with_buffered_reader.c  with_psock_handle_created_from_listen_address.c  with_read_raw_buffer.c
src/idris2/: RCPR.idr  RCPR.ipkg
src/idris2/Example/: EchoServer.idr
src/idris2/RCPR/: Library.idr  Psock.idr
